# Gallery2

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/cx/gallery2_aosp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jni/: CMakeLists.txt
app/src/main/cpp/jni_egl/: CMakeLists.txt
app/src/main/cpp/jni_egl/src/: jni_egl_fence.cpp
app/src/main/cpp/jni_jpegstream/: CMakeLists.txt
app/src/main/cpp/jni_jpegstream/src/: jpeg_reader.cpp  jpeg_reader.h
app/src/main/java/com/android/gallery3d/app/: AbstractGalleryActivity.java  ActivityState.java  AlbumPage.java  AlbumPicker.java  AlbumSetPage.java  CommonControllerOverlay.java  Config.java  FilterUtils.java  GalleryActionBar.java  GalleryActivity.java  GalleryAppImpl.java  ManageCachePage.java  MovieActivity.java  MovieControllerOverlay.java  MoviePlayer.java  MuteVideo.java  PhotoPage.java  PhotoPageBottomControls.java  PhotoPageProgressBar.java  PickerActivity.java  SlideshowPage.java  TimeBar.java  TrimTimeBar.java  TrimVideo.java
app/src/main/java/com/android/gallery3d/data/: CameraShortcutImage.java  ComboAlbumSet.java  EmptyAlbumImage.java  FaceClustering.java  LocalAlbum.java  LocalAlbumSet.java  LocationClustering.java  MediaDetails.java  SizeClustering.java  TagClustering.java  UnlockImage.java
app/src/main/java/com/android/gallery3d/filtershow/: CenteredLinearLayout.java  FilterShowActivity.java
app/src/main/java/com/android/gallery3d/ui/: EdgeEffect.java  (+15 more)
app/src/main/java/com/android/photos/: AlbumFragment.java  AlbumSetFragment.java  GalleryActivity.java  MultiChoiceManager.java  MultiSelectGridFragment.java
app/src/main/res/layout/: filtershow_activity.xml  filtershow_category_panel_new.xml  filtershow_main_panel.xml  filtershow_state_panel_new.xml  video_module.xml
app/src/main/res/layout-land/: filtershow_main_panel.xml
app/src/main/res/values/: styles.xml
app/src/main/res/xml/: video_preferences.xml
app/src/test/java/com/cx/gallery2_aosp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+123 files in other folders)
